--- a/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
@@ -2,27 +2,140 @@
     ViewBag.Title = "Sagepay";
 }
 <style>
-    body * {
-        font-family: sans-serif;
-    }
-
-    h1 {
-    }
-
+  
     input {
         font-size: 12pt;
     }
 
     #main {
-        width: 550px;
         margin: 0 auto;
         margin-top: 20px;
     }
+
+
 </style>
+
 <div id="main">
-    <h1>Payment Details</h1>
-    <div id="sp-container"></div>
-    <p><a id="my-tokenisation-trigger" href="#" class="btn btn-default">tokenise</a></p>
+    <section class="nb_sec nb_prdlisting_pgsec">
+        <div class="container">
+            <div class="breadCrumbtopsec">
+                <div class="nb_bread_crumbwrap">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li>></li>
+                            <li class="breadcrumb-item">
+                                <a href="#">Payments</a>
+                            </li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+            <div class="nb_sec checkconfirmSec">
+                <div class="progressBarStep ordConfirmationPgStepsec">
+                    <ul id="progressList">
+                        <li class="active">
+                            <div class="HalfCircle"></div>
+                            <span class="txt">Product</span><span class="count"><i class="icon-product"></i></span>
+                        </li>
+                        <li class="active">
+                            <div class="HalfCircle"></div>
+
+                            <span class="txt">Basket</span><span class="count"><i class="icon-basket-cart"></i></span>
+                        </li>
+                        <li class="active">
+                            <div class="HalfCircle"></div>
+                            <span class="txt">Review Items</span><span class="count"><i class="icon-review-items"></i></span>
+                        </li>
+                        <li class="active">
+                            <div class="HalfCircle"></div>
+                            <span class="txt">Billing & Shipping</span><span class="count">
+                                <i class="icon-billing-shipping"></i>
+                            </span>
+                        </li>
+                        <li>
+                            <div class="HalfCircle"></div>
+                            <span class="txt">Payment</span><span class="count"><i class="icon-credit-card"></i></span>
+                        </li>
+                        <li>
+                            <div class="HalfCircle"></div>
+                            <span class="txt">Order Confirmation</span><span class="count"><i class="icon-tick1"></i></span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="checkoutInnersec Paymentsec">
+                    <h4 class="ordConfirmHead">Payments</h4>
+                    <div class="orderTotalsec">
+                        <div>Order Total</div>
+                        <div>Total <span>£87.97</span></div>
+                    </div>
+
+                    <div class="paymentTabsec">
+                        <div class="myAccLeftNavsec">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="tab-content" id="v-pills-tabContent">
+                                        <div class="tab-pane fade show active"
+                                             id="v-pills-home"
+                                             role="tabpanel"
+                                             aria-labelledby="v-pills-home-tab">
+                                            <div class="tabcontentInner tab_myaccount">
+                                                <div class="subcontBox">
+                                                    <div class="cardDetailsWrap">
+                                                        <h3 class="subhead">
+                                                            Add Your Credit/Debit card Details
+                                                        </h3>
+
+                                                        <div id="sp-container"></div>
+
+                                                        <div class="submitBtnwra mt-4 mb-1">
+                                                            <a id="my-tokenisation-trigger" href="#" class="btnCmn">Submit</a>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="termandcondition">
+                                                        <h3 class="subhead">
+                                                            Terms & Conditions
+                                                        </h3>
+                                                        <p class="terms">
+                                                            Quisque magna lorem, auctor et felis in,
+                                                            consectetur consequat justo. Phasellus commodo,
+                                                            erat et bibendum condimentum, orci leo tempus
+                                                            lorem, id consequat enim diam eu nibh. Maecenas
+                                                            hendrerit arcu at mi iaculis sodales. Maecenas
+                                                            interdum lectus sit amet nisl tincidunt
+                                                            sollicitudin.
+                                                        </p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade"
+                                             id="v-pills-profile"
+                                             role="tabpanel"
+                                             aria-labelledby="v-pills-profile-tab">
+                                            internet banking
+                                        </div>
+                                        <div class="tab-pane fade"
+                                             id="v-pills-messages"
+                                             role="tabpanel"
+                                             aria-labelledby="v-pills-messages-tab">
+                                            pay with paypal
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
     <script type="text/javascript" src="https://pi-test.sagepay.com/api/v1/js/sagepay.js"></script>
     <script type="text/javascript">
     const checkout = sagepayCheckout({
