--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -125,7 +125,7 @@
             }
             else
             {
-                <button class="cont_shop_btn" onclick="window.location.href='@Url.Action("GetAddress", "Orders")'">Proceed to checkout</button>
+                <button class="cont_shop_btn" onclick="window.location.href='@Url.Action("Checkout", "Orders")'">Proceed to checkout</button>
             }
         }
     </div>
