--- a/WarehouseEcommerce/Views/Theme/University/Orders/_OrderProgressBar.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/_OrderProgressBar.cshtml
@@ -1,29 +1,32 @@
-﻿<div class="progressBarStep ordConfirmationPgStepsec">
+﻿@using Ganedata.Core.Entities.Enums;
+@model Ganedata.Core.Entities.Enums.OrderProgressStep
+
+<div class="progressBarStep ordConfirmationPgStepsec">
     <ul id="progressList">
-        <li class="active">
+        <li class="@((int)Model > (int)OrderProgressStep.Product ? "active" : "")">
             <div class="HalfCircle"></div>
             <span class="txt">Product</span><span class="count"><i class="icon-product"></i></span>
         </li>
-        <li class="active">
+        <li class="@((int)Model > (int)OrderProgressStep.Basket ? "active" : "")">
             <div class="HalfCircle"></div>
 
             <span class="txt">Basket</span><span class="count"><i class="icon-basket-cart"></i></span>
         </li>
-        <li class="active">
-            <div class="HalfCircle"></div>
-            <span class="txt">Review Items</span><span class="count"><i class="icon-review-items"></i></span>
-        </li>
-        <li>
+        <li class="@((int)Model > (int)OrderProgressStep.BillingAndShipping ? "active" : "")">
             <div class="HalfCircle"></div>
             <span class="txt">Billing & Shipping</span><span class="count">
                 <i class="icon-billing-shipping"></i>
             </span>
         </li>
-        <li>
+        <li class="@((int)Model > (int)OrderProgressStep.ReviewItems ? "active" : "")">
+            <div class="HalfCircle"></div>
+            <span class="txt">Review Items</span><span class="count"><i class="icon-review-items"></i></span>
+        </li>
+        <li class="@((int)Model > (int)OrderProgressStep.Payment ? "active" : "")">
             <div class="HalfCircle"></div>
             <span class="txt">Payment</span><span class="count"><i class="icon-credit-card"></i></span>
         </li>
-        <li>
+        <li class="@((int)Model > (int)OrderProgressStep.OrderConfirmation ? "active" : "")">
             <div class="HalfCircle"></div>
             <span class="txt">Order Confirmation</span><span class="count"><i class="icon-tick1"></i></span>
         </li>
