--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
 
                 </div>
-                <div class="modal-body" style="max-height:430px;">
+                <div class="modal-body">
 
                 </div>
                 <div class="modal-footer">
